# ray-tracing

./: .build  CMakeLists.txt  README.md  camera.c  camera.h  chess_scene.txt  color.c  color.h  cowscene.txt  heartscene.txt  homerscene.txt  main  main.c  queenscene.txt  ray.h  rockscene.txt  run.sh  scene.c  scene.h  scene.txt  shared.c  shared.h  vec3.h
app/: camera.c  camera.h  progress.c  progress.h  scene.c  scene.h
core/: aabb.c  aabb.h  color.c  color.h  debug.h  dyn_array.c  dyn_array.h  generic_types.h  interval.h  obj_parser.c  obj_parser.h  ray.h  scene_parser.c  scene_parser.h  util.h  vec3.h
hittable/: bvh_node.c  bvh_node.h  hit_record.c  hit_record.h  hittable.c  hittable.h  hittable_list.c  hittable_list.h  plane.c  plane.h  quad.c  quad.h  rotate_y.c  rotate_y.h  sphere.c  sphere.h  translate.c  translate.h  triangle.c  triangle.h  triangle_hittable.c  triangle_hittable.h  triangle_mesh.c  triangle_mesh.h  triangle_raw.c  triangle_raw.h
material/: dielectric.c  dielectric.h  diffuse_light.c  diffuse_light.h  lambertian.c  lambertian.h  material.c  material.h  metal.c  metal.h
parsers/: obj_parser.c  scene_parser.c  scene_parser.h
scenes/: base.txt  blue_light_metal.txt  chess.txt  cool.txt  cow.txt  crystal_bridge.txt  crystal_cave.txt  crystal_pyramid.txt  floating_prism.txt  geometric_flower_garden.txt  glass_tower.txt  heart.txt  light_box_std.txt  light_sphere.txt  metal2.txt  metal_sphere.txt  metal_spheres.txt  minimaltest.txt  orbital_ring.txt  statue.txt  triangle.txt
texture/: checkered.c  checkered.h  solid_color.c  solid_color.h  texture.c  texture.h
